--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "homepage": "https://pashatagir.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
